overflow issue

--- a/web/css/pluginskit.css
+++ b/web/css/pluginskit.css
@@ -52,7 +52,7 @@ dl.table dt { float: left; display: block; width: 35%; margin: 0; }
 #home-recent-active { position: relative; }
 #home-recent-active .meta { position: absolute; font-size: 11px; top: 5px; right: 10px; }
 
-.avatar { display: block; width: 50px; height: 50px; border: 1px solid #999; }
+.avatar { display: block; width: 50px; height: 50px; border: 1px solid #999; overflow: hidden; }
 .avatar img { border: 1px solid #fff; }
 
 .authors { margin: 8px; }
